--- a/TvShowReminder/Static/Style/site.css
+++ b/TvShowReminder/Static/Style/site.css
@@ -4,3 +4,20 @@
 .main {
   padding: 40px 15px;
 }
+
+.search-input-group .input-group-addon {
+    background: white !important; 
+}
+.search-input-group .form-control {
+	border-right:0; 
+	box-shadow:0 0 0; 
+	border-color:#ccc;
+}
+.search-input-group button {
+    border:0;
+    background:transparent;
+}
+
+.search-result-header {
+    padding-top: 25px;
+}
