Add button to update all episodes

--- a/TvShowReminder/Views/Shared/_Layout.cshtml
+++ b/TvShowReminder/Views/Shared/_Layout.cshtml
@@ -36,6 +36,11 @@
                 <ul class="nav navbar-nav">
                     <li class=""><a href="/sok">Sök</a></li>
                     <li><a href="#about">Prenumerationer</a></li>
+                    <li>
+                        <form class="navbar-form" action="/Home/UpdateAll" method="GET">
+                            <button type="submit" class="btn btn-success">Uppdatera alla program</button>
+                        </form>    
+                    </li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
