--- a/TvShowReminder/Views/Home/Index.cshtml
+++ b/TvShowReminder/Views/Home/Index.cshtml
@@ -1,9 +1,39 @@
-﻿@model dynamic
+﻿@model TvShowReminder.Models.EpisodeListViewModel
 
 @{
     ViewBag.Title = "TV-kollen";
 }
 
-<h1>TV Show Reminder</h1>
+<h1>TV-kollen</h1>
 
-Hello TV fans
+@if (Model.HasResults)
+{
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table table-striped" id="table">
+                <tbody>
+                    @foreach (var episode in Model.EpisodeList)
+                    {
+                        <tr>
+                            <td>@episode.Episode.AirDate.ToString("yyyy-MM-dd")</td>
+                            @if (episode.Episode.EpisodeNumber == 0)
+                            {
+                                <td>@episode.Subscription.TvShowName @string.Format("{0}xSpecial", episode.Episode.SeasonNumber)</td>
+                            }
+                            else
+                            {
+                                <td>@episode.Subscription.TvShowName @string.Format("{0}x{1}", episode.Episode.SeasonNumber, episode.Episode.EpisodeNumber)</td>
+                            }
+                            <td>@episode.Episode.Title</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <hr>
+        </div>
+    </div>
+}
+else
+{
+    <p>Inga TV-program de närmaste dagarna.</p>
+}
