--- a/TvShowReminder/Views/Shared/_Layout.cshtml
+++ b/TvShowReminder/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class=""><a href="/sok">Sök</a></li>
-                    <li><a href="#about">Prenumerationer</a></li>
+                    <li><a href="/Subscription/List">Prenumerationer</a></li>
                     <li>
                         <form class="navbar-form" action="/Home/UpdateAll" method="GET">
                             <button type="submit" class="btn btn-success">Uppdatera alla program</button>
