--- a/TvShowReminder/Views/Shared/_Layout.cshtml
+++ b/TvShowReminder/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="/sok">Sök</a></li>
+                    <li class=""><a href="/Subscription/Search">Sök</a></li>
                     <li><a href="/Subscription/List">Prenumerationer</a></li>
                     <li>
                         <form class="navbar-form" action="/Home/UpdateAll" method="GET">
