fix graphic glitches

--- a/TvShowReminder/Views/Subscription/List.cshtml
+++ b/TvShowReminder/Views/Subscription/List.cshtml
@@ -10,6 +10,7 @@
             <thead>
                 <tr>
                     <th>TV-program</th>
+                    <th>&nbsp;</th>
                 </tr>
             </thead>
             <tbody>
@@ -30,6 +31,5 @@
                 }
             </tbody>
         </table>
-        <hr>
     </div>
 </div>
